Fix: Make 'skip to transcript' button visible on focus (fixes #262) (#263)
* Make 'skip to transcript' button visible on focus

* Remove tabindex -1, add styles to mirror skip nav button

--- a/less/media.less
+++ b/less/media.less
@@ -11,6 +11,21 @@
     display: none;
   }
 
+  // Skip to transcript button
+  &__skip-to-transcript {
+
+    html:not(.has-accessibility) & {
+      .u-display-none;
+    }
+
+    &:not(:focus-visible) {
+      height: 0;
+      padding: 0;
+      margin: 0;
+      overflow: hidden;
+    }
+  }
+
   // Cross browser bug fixes
   // --------------------------------------------------
   .me-plugin {
